Fix gray background in IE
- Added transparent background to main navigation
- Remove unused link-bg css variable that messed up in IE

--- a/src/styles/elements/c-navigation.scss
+++ b/src/styles/elements/c-navigation.scss
@@ -150,7 +150,6 @@ ul {
     padding: 20px 0;
     border-top: 0;
     background: transparent;
-    background: var(--link-bg);
 
     &:before,
     &:after {
